# PatternSearch_HyperParam_Opt__V2

./: .gitignore  API_REFERENCE.md  BAYESHALVINGSearchCV_SPEC.md  BayesHalvingSearchCV_SPEC.md  EXPERIMENTS.md  LICENSE  LowData_Stress_PSCeager_BHS_Random42.ipynb  Optuna_Baseline.ipynb  PE_Round_0.25_1_10_100.ipynb  PE_Round_1_5_10_100.ipynb  PE_Round_2.5_5_10_100_verbose2.ipynb  PE_Round_5_10_20_100.ipynb  PatternSearchCV_SPEC.md  Prototype_Replication.ipynb  README.md  RealStratified_BHS_vs_PSC.ipynb  Replication_ExactGrid.ipynb  V1_Prototype_26grid.ipynb  optuna_partial_results.json  pyproject.toml
.github/workflows/: docs.yml
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst
experiments/: BHS_vs_PSC_26grid.ipynb  CH_optuna_gp_leg.py  CaliforniaHousing_4way_benchmark.py  CaliforniaHousing_4way_defaultladder_nstarts3.py  CaliforniaHousing_4way_ladder_nstarts4.py  Eager_26grid.ipynb  GP_Validation_vs_Optuna.ipynb  HeadToHead_26grid.ipynb  LowData_Stress_PSCeager_BHS_Random42.ipynb  PE_Round_0.25_1_10_100.ipynb  PE_Round_0.5_1_10_100.ipynb  PE_Round_1_5_10_100.ipynb  PE_Round_2.5_5_10_100_verbose2.ipynb  PE_Round_5_10_20_100.ipynb  PE_Stratified_5_10_20_100.ipynb  PE_Stratified_vs_Random_0.2_0.3_0.5_100.ipynb  Prototype_Original_Timed.ipynb  Replication_ExactGrid.ipynb  Trajectory_Match_RunA.ipynb  california_housing_4way_defaultladder_nstarts3_results.json  california_housing_4way_ladder_nstarts4_results.json  california_housing_4way_results.json  california_housing_optuna_gp_result.json
src/bayes_halving_search_cv/: __init__.py  _bayes.py  _climber.py  _engine.py  _fidelity.py  _gp.py  _sampling.py  _search.py  _space.py  _starts.py
src/pattern_search_cv/: __init__.py  _bayes.py  _climber.py  _engine.py  _fidelity.py  _gp.py  _sampling.py  _search.py  _space.py  _starts.py
tests/: test_bayes.py  test_climber.py  test_estimator.py  test_fidelity.py  test_gp.py  test_sampling.py  test_sklearn_compat.py  test_starts.py
