[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-search-cv"
version = "0.1.0.dev0"
description = "Hooke-Jeeves pattern search hyperparameter optimization for scikit-learn, with multi-fidelity data growth and scatter-search multi-start"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Rodrigo Pinto Coelho" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.6,<1.10",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
